--- a/main.html
+++ b/main.html
@@ -9,7 +9,48 @@
 </head>
 <body>
     <!-- add table here -->
-
+    <h1>Student Table</h1>
+    <table id="course">
+        <thead>
+            <tr>
+                <th>Student Name</th>
+                <th>Java</th>
+                <th>C++</th>
+                <th>Python</th>
+                <th>JavaScript</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Shanmukh</td>
+                <td>8</td>
+                <td>6</td>
+                <td>9</td>
+                <td>7</td>
+            </tr>
+            <tr>
+                <td>Sathya</td>
+                <td>9</td>
+                <td>7</td>
+                <td>8</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>Rajesh</td>
+                <td>7</td>
+                <td>6</td>
+                <td>8</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>Sunil</td>
+                <td>6</td>
+                <td>9</td>
+                <td>6</td>
+                <td>8</td>
+            </tr>
+        </tbody>
+    </table>
         
 </body>
 </html>
